<resources>
    <string name="app_name">AnLinux</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dashboard">Dashboard</string>
    <string name="about">About</string>
    <string name="others">Others</string>
    <string name="features">Features</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="desktop_environment">Desktop Environment</string>
    <string name="uninstall">Uninstall</string>
    <string name="support">Support Devs</string>
    <string name="desktop_title">Setup Desktop</string>
    <string name="ssh_title">Setup SSH</string>
    <string name="watch_ads">Watch Ads</string>
    <string name="donation">Donation</string>
    <string name="_continue">Continue</string>
    <string name="report">Report Error</string>
    <string name="ssh">SSH</string>
    <string name="patches">Patches</string>
    <string name="documentation">Documentation</string>
    <string name="step0">Please scroll down to see all steps if your device screen is small.</string>
    <string name="step1">Step 1 : Choose the distro you want to install, you can install multiple disto without conflict.</string>
    <string name="gui_step0">Please scroll down to see all steps if your device screen is small.\n\nRecommended having 2 GB spare before installing.\n\nWARNING: Only run this command inside the Linux System and not in Termux, otherwise it will not work!!!</string>
    <string name="gui_step1">Step 1 : Please choose a distro to setup the Desktop Environment</string>
    <string name="ssh_step0">Please scroll down to see all steps if your device screen is small.\n\nWARNING: This ssh server could not be connected from outside by other device unless you run the Linux distro with Run with Root Permission feature. Also please run this command inside the Linux System and not in Termux, otherwise it will not work!!!</string>
    <string name="ssh_step1">Step 1 : Please choose a distro to setup OpenSSH Server</string>
    <string name="patch_step0">Please scroll down to see all steps if your device screen is small.</string>
    <string name="patch_step1">Step 1 : Please choose a Patches</string>
    <string name="uninstall_step1">Step 1 : Choose the distro you want to UNINSTALL, the distro will be removed without a trace and could not be recovered.</string>
    <string name="press_again_to_exit">Please press again to exit application</string>
    <string name="about_content">AnLinux\nis a open source project intent to bring the access of Linux to Android platform.\n\nThe icon of this application is taken from https://www.iconfinder.com , which is created by user : "Alpár-Etele Méder", you can reach the icon author by clicking "ICON AUTHOR" button below.\n\nIf you are looking for the source code used in this app, click the SOURCE CODE button.\n\nIf you are looking for scripts and rootfs used in this app, please click the CONTENT SOURCE button, they are license under GPLv2.\n\nThanks for using this apps.\n\n\nRegards, EXA Lab</string>
    <string name="icon_author">Icon Author</string>
    <string name="source_code">Source Code</string>
    <string name="content_source_code">Content Source</string>
    <string name="choose">Choose</string>
    <string name="copy">Copy</string>
    <string name="Launch">Launch</string>
    <string name="ubuntu_beginner">Ubuntu (Recommended for Beginner)</string>
    <string name="xfce4_recommended">Xfce4 (Recommended)</string>
    <string name="first_warning_content">First of all, thanks for downloading AnLinux, below are some important parts, please read carefully. Scroll down to read the full content.\n\n1. To keep the distro small and light weight for easy install, most distro except Arch Linux and Kali Nethunter are minimal rootfs, which means most package are not installed yet, you could install them according to your need, and stop asking if the distro is faked.\n\n2. All distro are installed in this directory: /data/data/com.termux/files/home , please make sure that you have enough space before installing package and don\'t blame the app for occupying your device space because you are the one controlling it.\n\n3. Some distro may not available due to your device architecture.\n\n4. Currently, all device except mips based will work, if you encountered any error such as Proot signal 6, or function not implemented, just go to the Patches feature in app and apply SECCOMP patch.\n\n5. NEVER install two Desktop Environment or Desktop Environment alongside Window Manager on a same distro, if you want to install another Desktop Environment or Window Manager, please reinstall the distro first. To do this, use "Uninstall" feature first, then reinstall it from Dashboard.\n\n6. Please DO NOT report bugs about vncserver-start: command not found, there are no bug in the script and the reason this occur is either user didn\'t follow the instruction correctly or user\'s network error cause the package failed to download.\n\n\nThanks for reading, have a nice day :)</string>
    <string name="i_understand">I Understand</string>
    <string name="step2_cd">Step 2 : Please choose a distro first</string>
    <string name="step3_cd">Step 3 : Please choose a distro first</string>
    <string name="not_Supported">Not Supported</string>
    <string name="not_available">Not Available</string>
    <string name="same_arch_linux">Black Arch (Same as Arch Linux)</string>
    <string name="termux_not_Installed">Looks like Termux is not installed, but AnLinux only work with Termux v0.118.0.\n\nIMPORTANT: Please note that Termux in Google Play is deprecated and will not be updated in the future, Termux development team will now only update the package in F-droid, do you want to download it from F-droid now? (Scroll down and click Download APK to download Termux)</string>
    <string name="termux_not_fdroid">Looks like you are using the deprecated version of Termux, but AnLinux only work with Termux v0.118.0.\n\nIMPORTANT: Please note that Termux in Google Play is deprecated and will not be updated in the future, Termux development team will now only update the package in F-droid, do you want to download it from F-droid now? (Scroll down and click Download APK to download Termux)</string>
    <string name="uninstall_step2">Step 2 : Copy the command to clipboard : %1$s \n\n This should fully remove %2$s from Termux.</string>
    <string name="uninstall_step3">Step 3 : Start Termux, paste and enter the command to uninstall distro. Important: you will need to run this command inside Termux shell and NOT IN Linux Shell.</string>
    <string name="ashmem_step1">Please scroll down to see all steps if your device screen is small.\n\nWARNING: You should have wget installed on linux distro before proceeding, also remember only run this command inside the Linux System and not in Termux, otherwise it will not work!!!\n\nAbout Ashmem: System V shared memory emulation on Android, using ashmem. That includes shmget, shmat, shmdt and shmctl functions. It does not use Binder service, and does not link to Java libraries. It uses Linux sendmsg/recvmsg API instead to transfer file handlers.\n\nWhat it do: If you have error running some GUI programs, install this patch may solve the problem.\n\nHow to use: env LD_PRELOAD="/usr/local/lib/libandroid-shmem.so" linux_command"</string>
    <string name="ashmem_step2">Step 2 : Copy the command to clipboard : %1$s \n\nThis should install %2$s on your system.</string>
    <string name="ashmem_step3">Step 3 : Start Termux, paste and enter the command to install Patches. Remember: you will need to run ./start-*.sh to run the Linux System before using this command.</string>
    <string name="bug_encounter">If you encountered a bug, you can choose to open an issue on Github, or email us.</string>
    <string name="support_after_donation">Thanks for purchasing Donation Package, you can still watch video ads to support the developers, or continue to enjoy this app.</string>
    <string name="ask_for_donation">Thanks for using this app, do you want to support the developers?\n\nYou can choose to watch an ad video, which will remove advertisement for a day, or purchase a Donation Package on Play Store which remove the ads forever.</string>
    <string name="bug_report1">Bug Report</string>
    <string name="bug_report2">Please choose an app</string>
    <string name="no_video_ads">Currently no video ads available</string>
    <string name="ads_removed_temp">The ads are removed for today.</string>
    <string name="thanks_for_support">Thanks for your support!!!</string>
    <string name="documentation_prompt">Does not understand how it works?\n\nForgot how to start or exit distro, or forgot how to start the VNC Server(Desktop Enviroment)?\n\nThen this feature is for you, if you have these problem, or something you don\'t understand about this app, you could found some solution in the Github wiki pages.\n\nVisit now?</string>
    <string name="ssh_step2">Step 2 : Copy the command to clipboard : %1$s \n\n This should setup OpenSSH on the Linux System.</string>
    <string name="ssh_step3">Step 3 : Start Termux, paste and enter the command to setup SSH. Remember: you will need to run %1$s to run the Linux System before using this command.</string>
    <string name="de_step2_choose_first">Step 2: Please choose a Desktop Environment</string>
    <string name="de_step3_choose_first">Step 3: Please choose a Desktop Environment first</string>
    <string name="de_step4_choose_first">Step 4: Please choose a Desktop Environment first</string>
    <string name="gui_step2">Step 3 : Copy the command to clipboard : %1$s \n\nThis should setup %2$s and Tiger VNC on the Linux System.</string>
    <string name="gui_step3">Step 4 : Start Termux, paste and enter the command to install the desktop environment. Remember: you will need to run %1$s to run the Linux System before using this command.</string>
    <string name="dashboard_step2">Step 2 : Copy the command to clipboard : %1$s \n\nThis should install %2$s on your system, you can then run %3$s to run the command line.</string>
    <string name="dashboard_step3">Step 3 : Start Termux, paste and enter the command to install distro. Remember: you will need to run %1$s to run the command line.</string>
    <string name="dashboard_step2_arch">Step 2 : Copy the command to clipboard : %1$s \n\nThis should install %2$s on your system, you can then run %3$s to run the command line.\n\nAfter that, you will need to run: chmod 755 additional.sh &amp;&amp; ./additional.sh to setup resolv.conf and pacman-key, otherwise network connection and pacman wont work!!! (First time only)</string>
    <string name="run_with_root">Run with Root Permission</string>
    <string name="root_content2">Start Termux, paste and enter the command above, after that, you could simply run the sudo -s command, then run ./start-*.sh like usual.</string>
    <string name="rootfs_download">Download Rootfs</string>
    <string name="window_manager">Window Manager</string>
    <string name="heavy_de">Heavy DE</string>
    <string name="heavy_de_note">Heavy Desktop Environment was a feature that let you install Desktop Environment that are very beautiful and popular among desktop Linux users. But they require lots of space, resource and ram to work.\n\nSo before installing, please make sure you have at least:\n\n5GB of space\n4GB ram</string>
    <string name="heavy_de_step1">Step 1 : Please choose a Desktop Environment</string>
    <string name="wiki">Wiki</string>
</resources>