<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />
    </group>

    <item android:title="@string/features">
        <menu>
            <item
                android:id="@+id/ssh"
                android:icon="@drawable/ic_ssh"
                android:title="@string/ssh" />
            <item
                android:id="@+id/gui"
                android:icon="@drawable/ic_desktop"
                android:title="@string/desktop_environment" />
            <item
                android:id="@+id/hgui"
                android:icon="@drawable/ic_heavydesktop"
                android:title="@string/heavy_de" />
            <item
                android:id="@+id/wm"
                android:icon="@drawable/ic_windowmanager"
                android:title="@string/window_manager"/>
            <item
                android:id="@+id/uninstall"
                android:icon="@drawable/ic_uninstall"
                android:title="@string/uninstall" />
            <item
                android:id="@+id/patch"
                android:icon="@drawable/ic_patch"
                android:title="@string/patches" />
            <item
                android:id="@+id/su"
                android:icon="@drawable/ic_superuser"
                android:title="@string/run_with_root" />
            <item
                android:id="@+id/rootfs_download"
                android:icon="@drawable/ic_rootfsdownload"
                android:title="@string/rootfs_download" />
            <item
                android:id="@+id/wiki"
                android:icon="@drawable/ic_wiki"
                android:title="@string/wiki" />
        </menu>
    </item>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/documentation"
                android:icon="@drawable/ic_documentation"
                android:title="@string/documentation" />
            <item
                android:id="@+id/support"
                android:icon="@drawable/ic_support"
                android:title="@string/support" />
            <item
                android:id="@+id/report"
                android:icon="@drawable/ic_report"
                android:title="@string/report" />
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_about"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
